--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -15,39 +15,18 @@
       {% endif %} 
       <div class="caption post-detail-item">
         <h3>{{ instance.title }}</h3><small>{{ instance.publish }} ago {% if instance.user.get_full_name %}
-        <p>Author: {{ instance.user.get_full_name }}</p>
-{% endif %}</small>{% if instance.draft %}<span style='color:red;'>Draft</span> {% endif %}
-        <p><div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-<hr/>
-</p>
+        <p>Author: {{ instance.user.get_full_name }}</p>{% endif %}</small>
+        {% if instance.draft %}<span style='color:red;'>Draft</span> 
+        {% endif %}
+
+        <div class="fb-share-button" 
+    data-href="{{ request.build_absolute_uri }}" 
+    data-layout="button_count">
+  </div><hr/>
         <p>{{ instance.content }}</p><hr/>
     </div>
   </div>
 </div>
-<div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
-
-</div>
-
-
-<!-- <p>
-<a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
-Facebook
-</a>
-
-<a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">
-Twitter
-</a>
-
-<a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'>
-
-
-<a href="https://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&title={{ instance.title }}&summary={{ share_string }}&source={{ request.build_absolute_uri }}">
-Linkedin
-</a>
-
-<a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}.">Reddit</a>
-
-</p> -->
 
 
 {% endblock content %}
