--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
     <div class="container">
   <button class="navbar-toggler hidden-lg-up pull-right" type="button" data-toggle="collapse" data-target="#mainNavbarCollapse">
-  Menu
+  <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
   <a class="navbar-brand" href="#">
   <i class=""></i> Web Name
