--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+ {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -71,6 +71,8 @@ fjs.parentNode.insertBefore(js, fjs);
       </div><!-- /.row -->
 
     </div><!-- /.container -->
+
+    <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/jekalviar.pythonanywhere.com"><img src="https://seal.beyondsecurity.com/verification-images/jekalviar.pythonanywhere.com/vulnerability-scanner-2.gif" alt="Website Security Test" border="0" /></a>
 
    {% include "footer.html" %}
 
